--- a/demos/index.html
+++ b/demos/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Demos - QuakeWorld Hub</title>
+    <title>Demos - QWLAN.PL</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 <body>
